crates/bijux-dna-domain-fastq/tests/snapshots/bijux-dna-domain-fastq__contracts__stage_contract__fastq_correct_errors.snap
---
source: crates/bijux-dna-domain-fastq/tests/contracts/stage_contract_snapshots.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "inputs": {
    "accepted_kinds": [
      "SingleEnd",
      "PairedEnd"
    ],
    "kind": "SingleEnd"
  },
  "metrics": {
    "classes": [
      "Integrity",
      "QualityShift"
    ],
    "invariants": [
      "reads_out == reads_in",
      "bases_out <= bases_in",
      "mean_q_after >= mean_q_before (warn)",
      "counts are non-negative"
    ],
    "notes": "Correct should preserve reads while improving quality."
  },
  "outputs": {
    "emits_fastq": true,
    "kind": "SingleEnd",
    "possible_kinds": [
      "SingleEnd",
      "PairedEnd"
    ]
  },
  "retention": {
    "definition": "reads_out == reads_in; bases_out <= bases_in",
    "may_drop": [],
    "may_drop_reads": false,
    "must_preserve_pairing": true,
    "preserves": [
      "reads",
      "pairs",
      "bases",
      "pairing_metadata"
    ],
    "units": "reads,bases"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.correct_errors",
  "tool_ids": [
    "rcorrector",
    "musket",
    "lighter",
    "bayeshammer"
  ]
}
